// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create/get-project-name should warn user and prompt if specified project name (My-Project) is invalid 1`] = `
Array [
  "The project name must be a valid npm package name: name can no longer contain capital letters",
]
`;

exports[`create/get-project-name should warn user and prompt if specified project name (my$project) is invalid 1`] = `
Array [
  "The project name must be a valid npm package name: name can only contain URL-friendly characters",
]
`;
